# FastapiFour_F4

./: .env.example  .gitignore  .gitmessage.txt  README.md  pyproject.toml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  db.py  security.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  diary.py  diary_model.py  random_question_model.py  token_blacklist.py  token_blacklist_model.py  user.py  user_model.py  wise_word_model.py
app/repositories/: __init__.py  diary_repository.py  random_question_repository.py  token_blacklist_repository.py  user_repository.py
app/routers/: auth.py  auth_router.py  diary.py  diary_router.py  random_question_router.py  wise_word_router.py  wise_word_routers.py
app/schemas/: auth.py  diary.py  diary_schema.py  random_question_schema.py  wise_word_schema.py
app/scrapers/: wise_word_scraper.py
app/services/: auth_service.py  diary_service.py  random_question_service.py  wise_words.py  wise_words_service.py
migrations/models/: 0_20260310150829_init.py  1_20260310211325_None.py  2_20260310211526_update.py  3_20260311123157_add_bookmarked_wiseword.py  4_20260311133802_modify_table_name.py
tests/: test_auth_api.py
